<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/wordSetProgress"

        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"

        android:layout_height="3dip"

        android:progressDrawable="@drawable/progressbar"
        android:visibility="visible" />

    <ProgressBar
        android:id="@+id/please_wait_progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:paddingTop="64dp"
        android:visibility="gone" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/word_set_practise_form"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <talkapp.org.talkappmobile.activity.custom.WordSetsOriginalTextLayout_ xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/originalTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="10pt"
                android:background="@drawable/shape_rectangle">

                <talkapp.org.talkappmobile.activity.custom.OriginalTextTextView_
                    android:id="@+id/originalText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="3pt"
                    android:layout_marginRight="3pt"
                    android:layout_marginTop="5pt"

                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/color.text.origin"
                    android:textSize="14pt" />

                <talkapp.org.talkappmobile.activity.custom.RightAnswerTextView_
                    android:id="@+id/rightAnswer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_below="@+id/originalText"
                    android:layout_marginBottom="5pt"
                    android:layout_marginTop="20pt"

                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/color.text.answer"
                    android:textSize="9pt" />

                <talkapp.org.talkappmobile.activity.custom.PronounceRightAnswerButton_
                    android:id="@+id/pronounceRightAnswerButton"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rightAnswer"

                    android:background="@android:color/transparent"

                    android:text="PRON"
                    android:textColor="@color/color.text.answer"

                    android:textSize="5pt" />

                <Button
                    android:id="@+id/showButton"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@id/rightAnswer"
                    android:layout_alignRight="@id/rightAnswer"
                    android:layout_below="@+id/rightAnswer"

                    android:background="@android:color/transparent"

                    android:text="SHOW"
                    android:textColor="@color/color.text.answer"

                    android:textSize="5pt" />

            </talkapp.org.talkappmobile.activity.custom.WordSetsOriginalTextLayout_>

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/answerTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_below="@+id/originalTextLayout"
                android:layout_marginTop="10pt"

                android:background="@drawable/shape_rectangle">

                <EditText
                    android:id="@+id/answerText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="3pt"
                    android:layout_marginRight="3pt"
                    android:layout_marginTop="5pt"

                    android:background="@android:color/background_light"
                    android:gravity="center_horizontal"
                    android:lines="4"
                    android:maxLines="4"
                    android:textColor="@color/color.text.answer"
                    android:textSize="13pt" />

                <LinearLayout
                    android:id="@+id/spellingGrammarErrorsListView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_below="@+id/answerText"
                    android:layout_marginLeft="3pt"
                    android:layout_marginRight="3pt"
                    android:layout_marginTop="5pt"
                    android:orientation="vertical" />

                <Button
                    android:id="@+id/playButton"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/spellingGrammarErrorsListView"
                    android:layout_marginTop="0pt"
                    android:layout_toLeftOf="@+id/speakButton"
                    android:layout_toStartOf="@+id/speakButton"

                    android:background="@android:color/transparent"

                    android:text="LISTEN"
                    android:textColor="@color/color.text.answer"

                    android:textSize="5pt" />

                <Button
                    android:id="@+id/speakButton"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@id/answerText"
                    android:layout_alignRight="@id/answerText"
                    android:layout_below="@+id/spellingGrammarErrorsListView"
                    android:layout_marginTop="0pt"

                    android:background="@android:color/transparent"

                    android:text="BY VOICE"
                    android:textColor="@color/color.text.answer"

                    android:textSize="5pt" />

            </RelativeLayout>

            <Button
                android:id="@+id/checkButton"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/answerTextLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20pt"
                android:layout_marginTop="15pt"

                android:background="@drawable/shape_rectangle"
                android:minHeight="25pt"
                android:minWidth="55pt"
                android:text="CHECK"
                android:textColor="@color/color.button.text"
                android:textSize="12sp"

                android:textStyle="bold" />

            <Button
                android:id="@+id/closeButton"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/answerTextLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20pt"
                android:layout_marginTop="15pt"

                android:background="@drawable/shape_rectangle"
                android:minHeight="25pt"
                android:minWidth="55pt"
                android:text="CLOSE"
                android:textColor="@color/color.button.text"
                android:textSize="12sp"

                android:textStyle="bold"
                android:visibility="gone" />

            <Button
                android:id="@+id/nextButton"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/answerTextLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20pt"
                android:layout_marginTop="15pt"

                android:background="@drawable/shape_rectangle"
                android:minHeight="25pt"

                android:minWidth="55pt"
                android:text="NEXT"
                android:textColor="@color/color.button.text"
                android:textSize="12sp"
                android:textStyle="bold"

                android:visibility="gone" />
        </RelativeLayout>
    </ScrollView>

</LinearLayout>