<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ProgressBar
        android:id="@+id/please_wait_progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:paddingTop="64dp"
        android:visibility="gone" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mainForm"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <talkapp.org.talkappmobile.activity.custom.WordSetVocabularyView_
                android:id="@+id/wordSetVocabularyView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:readOnly="false" />

            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/wordSetVocabularyView"
                android:text="@string/adding_new_word_set_fragment_button_save" />
        </RelativeLayout>
    </ScrollView>
</LinearLayout>
