<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="addEditDialogPhraseBox" type="id" />
    <item name="addEditDialogTranslationBox" type="id" />
</resources>