...
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_scoring">Scoring</string>
    <string name="score_sentence_dialog_title">Score the sentence</string>
    <string name="sentences_for_change_dialog_title">Sentences for asking</string>
    <string name="another_sentence_option">Get another sentence</string>
    <string name="poor_sentence_option">Poor or short</string>
    <string name="corrupted_sentence_option">Corrupted or weird</string>
    <string name="insult_sentence_option">Insult or rude</string>
    <string name="error_invalid_unchecking_all">impossible to uncheck all</string>

    <string name="word_set_task_repetitions_title">Repeat old sets</string>
...

    <string name="phrase_translation_input_text_view_popup_title">Add phrase with translation</string>
    <string name="phrase_translation_input_text_view_popup_phrase_label">The phrase is required</string>
    <string name="phrase_translation_input_text_view_popup_translation_label">The translation is not required</string>
    <string name="phrase_translation_input_text_view_popup_phrase_hint">English phrase</string>
    <string name="phrase_translation_input_text_view_popup_translation_hint">Translation</string>
    <string name="phrase_translation_input_text_view_popup_button_ok">OK</string>
    <string name="phrase_translation_input_text_view_popup_button_cancel">Cancel</string>
    <string name="phrase_translation_input_word_text_view_hint">Swipe left to edit</string>
    <string name="phrase_translation_hidden_button_say_label">SAY</string>
    <string name="phrase_translation_hidden_button_edit_label">EDIT</string>
    <string name="phrase_translation_hidden_button_reset_label">RESET</string>
    <string name="phrase_translation_warning_read_only_mode">Reset is impossible</string>
...
